--- a/src/vigilo/themes/templates/vigiboard/history_table.html
+++ b/src/vigilo/themes/templates/vigiboard/history_table.html
@@ -11,7 +11,7 @@
 <?python from vigiboard.controllers.plugins import VigiboardRequestPlugin ?>
 
 <head> 
-    <title>Vigiboard - Event #${idevent} history</title>
+    <title>${l_('Vigiboard - Event #%d history') % idevent}</title>
 </head>
 
 <body>	
@@ -39,7 +39,7 @@
 					</div>
 				    
 		          	<div class="table_title">
-		          		 <span>Event #${idevent} history</span>
+		          		 <span>${l_('Event #%d history') % idevent}</span>
 				    </div>
 				    
 	            </th>
