--- a/src/vigilo/themes/templates/vigiboard/plugins/details.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/details.html
@@ -41,7 +41,7 @@
         <div id="external_links">
             <ul>
                 <li py:for="edname, edit in tg.config['vigiboard_links.eventdetails'].iteritems()">
-                    <a href="#" id="DetailsDialog_${edname}">${edit[0]}</a>
+                    <a target="_blank" href="#" id="DetailsDialog_${edname}">${edit[0]}</a>
                 </li>
             </ul>
         </div>
