--- a/src/vigilo/themes/templates/vigiboard/raw_events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/raw_events_table.html
@@ -10,7 +10,7 @@
 <?python from vigilo.models import StateName ?>
 
 <head> 
-    <title>Vigiboard - Masked events list for event #${idcorrevent}</title>
+    <title>${l_('Vigiboard - Masked events list for event #%d') % idcorrevent}</title>
 </head>
 
 <body>
@@ -38,7 +38,7 @@
 		            </div>
 		
 		            <div class="table_title">
-			        	<span>Masked events list for event #${idcorrevent}</span>
+			        	<span>${l_('Masked events list for event #%d') % idcorrevent}</span>
 		            </div>
 		            
 		    	</th>
