Mise à jour des thèmes suite aux changements dans le modèle (r2550).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2553 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/events_table.html
@@ -7,7 +7,7 @@
 <xi:include href="vigiboard.html" />
 
 <?python from genshi import HTML ?>
-<?python from vigilo.models import StateName ?>
+<?python from vigilo.models.tables import StateName ?>
 <?python from vigiboard.controllers.plugins import VigiboardRequestPlugin ?>
 
 <head> 
