--- a/src/vigilo/themes/templates/vigiboard/history_table.html
+++ b/src/vigilo/themes/templates/vigiboard/history_table.html
@@ -7,7 +7,7 @@
 <xi:include href="vigiboard.html" />
 
 <?python from genshi import HTML ?>
-<?python from vigilo.models import StateName ?>
+<?python from vigilo.models.tables import StateName ?>
 <?python from vigiboard.controllers.plugins import VigiboardRequestPlugin ?>
 
 <head> 
