gestion du mode map generated
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2582 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -65,10 +65,14 @@ ul {
     cursor: pointer;
 }
 
-#leftmenu .addmap div:hover {
+#leftmenu .addmap div.hover {
     border: 2px solid #ffcc66;
     color: #ffcc66;
     cursor: pointer;
+}
+
+#leftmenu .addmap .disabled {
+    opacity: 0.2;
 }
 
 #leftmenu .selected {
