--- a/src/vigilo/themes/templates/vigimap/map_form.html
+++ b/src/vigilo/themes/templates/vigimap/map_form.html
@@ -1,4 +1,4 @@
 <div xmlns:py="http://genshi.edgewall.org/">
-    ${map_form(kw, onsubmit=onsubmit)}
+    ${map_form(kw, onsubmit=onsubmit, child_args=child_args)}
 </div>
 
