--- a/src/vigilo/themes/templates/vigimap/edition.html
+++ b/src/vigilo/themes/templates/vigimap/edition.html
@@ -43,12 +43,8 @@
     <script type="text/javascript" src="${tg.url('/js/fieldautocomplete.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/buttonColor.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/tg_submit.js')}"></script>
-    <!--! Les lignes suivantes sont générées automatiquement par les fonctions empty-dynform et emptu-calendar
-    <script type="text/javascript" src="/toscawidgets/resources/tw.dynforms.widgets/static/dynforms.js"></script>
-    <script type="text/javascript" src="/toscawidgets/resources/tw.forms/static/calendar/calendar.js"></script>
-    <script type="text/javascript" src="/toscawidgets/resources/tw.forms/static/calendar/calendar-setup.js"></script>
-    <script type="text/javascript" src="/toscawidgets/resources/tw.forms/static/calendar/lang/calendar-fr.js"></script>
-    -->
+    <script type="text/javascript" src="${tg.url('/js/images.js')}"></script>
+    
     
 </head>
 <body>
