--- a/src/vigilo/themes/templates/vigimap/edition.html
+++ b/src/vigilo/themes/templates/vigimap/edition.html
@@ -9,6 +9,7 @@
     <!--[if IE]><script type="text/javascript" src="${tg.url('/js/excanvas.js')}"></script><![endif]-->
     <link rel="stylesheet" type="text/css" href="${tg.url('/css/jxlib/jxtheme.uncompressed.css')}" />
     <style type="text/css">@import "${tg.url('css/map.css')}";</style>
+    <style type="text/css">@import "${tg.url('css/images.css')}";</style>
     <script type="text/javascript" src="${tg.url('/js/mootools.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/mootools-more.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/drag.move.ghost.js')}"></script>
