--- a/src/vigilo/themes/templates/vigimap/index.html
+++ b/src/vigilo/themes/templates/vigimap/index.html
@@ -9,16 +9,16 @@
     <!--[if IE]><script type="text/javascript" src="${tg.url('/js/excanvas.js')}"></script><![endif]-->
     <link rel="stylesheet" type="text/css" href="${tg.url('/css/jxlib/jxtheme.uncompressed.css')}" />
     <style type="text/css">@import "${tg.url('css/map.css')}";</style>
-    <script type="text/javascript" src="${tg.url('/js/mootools.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/mootools-more.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/lib/mootools.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/lib/mootools-more.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/drag.move.ghost.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/jxlib.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/lib/jxlib.js')}"></script>
     <script type="text/javascript">Jx.baseURL = 'js';</script>
     <!--!
         "js/babel.js" doit être chargé avant "i18n",
         qui doit lui-même être chargé avant "js/map.js".
     -->
-    <script type="text/javascript" src="${tg.url('/js/babel.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/lib/babel.js')}"></script>
     <script type="text/javascript" src="${tg.url('/i18n')}"></script>
     <script type="text/javascript" src="${tg.url('/js/loader.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/legend.js')}"></script>
