--- a/src/vigilo/themes/templates/vigimap/widget_form.html
+++ b/src/vigilo/themes/templates/vigimap/widget_form.html
@@ -8,9 +8,9 @@
     <title>VigiMap</title>
     <!--[if IE]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
     <link rel="stylesheet" type="text/css" href="${tg.url('/css/jxtheme.uncompressed.css')}" />
-    <script type="text/javascript" src="${tg.url('/js/mootools.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/mootools-more.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/jxlib.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/lib/mootools.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/lib/mootools-more.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/lib/jxlib.js')}"></script>
     <link rel="stylesheet" type="text/css" href="${tg.url('/css/style.css')}" />
 </head>
 
