--- a/src/vigilo/themes/templates/vigimap/link.html
+++ b/src/vigilo/themes/templates/vigimap/link.html
@@ -1,6 +1,7 @@
 <div xmlns:py="http://genshi.edgewall.org/">
-  <p>${l_("Link between %(from_node)s and %(to_node)s") % {'from_node': from_node, 'to_node': to_node}}</p>
-  <p>${l_("Reference service: %(service)s on %(host)s") % {'service': service, 'host': host}}</p>
-  <p>${l_("Status: %(status)s") % {'status': status}}</p>
+  <h2>${l_("Link between %(from_node)s and %(to_node)s") % {'from_node': from_node, 'to_node': to_node}}</h2>
+  <p class="status status-${status.lower()}">${l_("Status: %(status)s") % {'status': status}}</p>
+  <p><span class="label">${l_("Reference service:")}</span>
+     ${l_("%(service)s on %(host)s") % {'service': service, 'host': host}}</p>
   <p py:if="img"><img src="${img}" alt="${alt}" /></p>
 </div>
