Mise à jour des thèmes de VigiGraph pour que le bouton d'impression général soit affiché dans la barre de "menu" plutôt que dans le dialogue principal.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2631 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigigraph/css/vigigraph.css
+++ b/src/vigilo/themes/public/vigigraph/css/vigigraph.css
@@ -49,6 +49,12 @@ ul#mainmenu #version {
     padding: 4px 0px;
 }
 
+ul#mainmenu #print {
+    padding-left: 26px;
+    background-image: url("../resource/qx/icon/Nuvola/22/actions/document-print.png");
+    background-repeat: no-repeat;
+}
+
 table.header_table {
     background-color: #F0F1F5;
     border-collapse:collapse;
